[gd_scene load_steps=6 format=3 uid="uid://dklre5rf5vnqa"]

[ext_resource type="Theme" uid="uid://dw7ft4xik3rji" path="res://Assets/Theme/Normal.tres" id="1_jukt2"]
[ext_resource type="PackedScene" uid="uid://bwegnxa4rtgh2" path="res://Scene/UI/TitleBar.tscn" id="2_ko47m"]
[ext_resource type="Script" path="res://Script/UI/Repository.gd" id="2_pfbyc"]
[ext_resource type="Resource" uid="uid://bif6bdpqee0bn" path="res://Assets/Resources/Inventory/Repository.tres" id="3_77a13"]
[ext_resource type="LabelSettings" uid="uid://buvwr4pla8wi1" path="res://Assets/LabelSetting/BigWhite.tres" id="3_631j1"]

[node name="Repository" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jukt2")
script = ExtResource("2_pfbyc")
repo = ExtResource("3_77a13")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" parent="Panel/VBoxContainer" instance=ExtResource("2_ko47m")]
layout_mode = 2
title_text = "仓库"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="RepoItems" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/RepoItems"]
layout_mode = 2
text = "仓库"
label_settings = ExtResource("3_631j1")

[node name="RepoItems" type="ScrollContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/RepoItems"]
layout_mode = 2
size_flags_vertical = 3

[node name="RepoItems" type="GridContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/RepoItems/RepoItems"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6

[node name="InventoryItems" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/InventoryItems"]
layout_mode = 2
text = "背包"
label_settings = ExtResource("3_631j1")

[node name="InventoryItems" type="ScrollContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/InventoryItems"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryItems" type="GridContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/InventoryItems/InventoryItems"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6
